# DB-mlops-genai

./: .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  book.toml  deny.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: book.yml  ci.yml
book/output/: 404.html  databricks-setup.html  index.html  print.html  searchindex.js  searchindex.json  sovereign-ai-stack.html  toc.html  toc.js
book/output/course1/: lab-delta.html  lab-lakehouse.html  lab-notebooks.html  lab-spark.html  lab-workflows.html  lab-workspace.html  overview.html  week1.html  week2.html  week3.html
book/output/course3/: lab-features.html  lab-mlflow.html  lab-quality.html  lab-serving.html  lab-training.html  overview.html  week1.html  week2.html  week3.html  week4.html  week5.html  week6.html
book/output/course4/: lab-embeddings.html  lab-finetuning.html  lab-production.html  lab-prompts.html  lab-rag.html  lab-tokenizer.html  overview.html  week1.html  week2.html  week3.html  week4.html  week5.html  week6.html  week7.html
book/src/: SUMMARY.md  databricks-setup.md  introduction.md  sovereign-ai-stack.md
book/src/course1/: lab-delta.md  lab-lakehouse.md  lab-notebooks.md  lab-spark.md  lab-workflows.md  lab-workspace.md  overview.md  week1.md  week2.md  week3.md
book/src/course3/: lab-features.md  lab-mlflow.md  lab-quality.md  lab-serving.md  lab-training.md  overview.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
book/src/course4/: lab-embeddings.md  lab-finetuning.md  lab-production.md  lab-prompts.md  lab-rag.md  lab-tokenizer.md  overview.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md  week7.md
demos/course3/: README.md
demos/course3/week1/: README.md
demos/course3/week1/experiment-tracking/: Cargo.toml
demos/course3/week1/experiment-tracking/src/: main.rs
demos/course3/week2/: README.md
demos/course3/week2/feature-pipeline/: Cargo.toml
demos/course3/week2/feature-pipeline/src/: main.rs
demos/course3/week2/model-training/: Cargo.toml
demos/course3/week3/: README.md
demos/course3/week4/: README.md
demos/course3/week4/inference-server/: Cargo.toml
demos/course3/week4/inference-server/src/: main.rs
demos/course3/week5/: README.md
demos/course3/week6/: README.md
demos/course4/: README.md
demos/course4/week1/: README.md
demos/course4/week2/: README.md
demos/course4/week3/: README.md
docs/: ARCHIVED-courses-3-4-sovereign-ai-stack.md  FALSIFICATION_CHECKLIST.md  outline.md
docs/qa/: course-falsification-checklist.md
examples/databricks/: README.md
examples/sovereign/: README.md
labs/course3/: README.md
labs/course4/: README.md
tests/: test_structure.py
(+103 files in other folders)
