[project]
name = "db-mlops-genai"
version = "0.1.0"
description = "MLOps & GenAI Engineering on Databricks - Courses 3 & 4"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "mlflow>=2.10.0",
    "databricks-sdk>=0.20.0",
    "delta-spark>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.3.0",
    "openai>=1.10.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E722"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
