[package]
name = "mlflow-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for MLflow REST API - Course 3 Week 1 Demo"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

[dev-dependencies]
wiremock = "0.6"
