[package]
name = "feature-pipeline"
version = "0.1.0"
edition = "2021"
description = "SIMD-accelerated feature engineering - Course 3 Week 2 Demo"

[dependencies]
trueno = "0.11"
alimentar = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rayon = "1.10"

[dev-dependencies]
