[package]
name = "model-training"
version = "0.1.0"
edition = "2021"
description = "ML training with aprender and model registry with pacha - Course 3 Week 3"

[dependencies]
aprender = "0.25"
pacha = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rand = "0.8"

[dev-dependencies]
